--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.0
   flutter_zoom_drawer: ^3.1.1
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
